samples/_failures_safe/1761138084_54c3f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f3d283ad.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_f3d283ad.c:183:5: error: expected expression at end of input
  183 |     printf("Dijkstra distances from vertex %d:\n",
      |     ^~~~~~
./samples/SAFE/__tmp_f3d283ad.c:183:5: error: expected declaration or statement at end of input
